--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,5 @@
 MONGO_URI=mongodb://127.0.0.1:27017/mernAuthDB
+MONGO_URI_LIVE=mongodb+srv://GIDEON-BABALOLA:COVENANT@firstdatabase.ejgnpbe.mongodb.net/mernAuthDB
 PORT=5000
 JWT_SECRET=mysecretKey
 NODE_ENV=development
